--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ sqlalchemy = "^2.0.34"
 psycopg2-binary = "^2.9.9"
 uvicorn = "^0.30.6"
 pydantic-settings = "^2.5.2"
-fastapi-jwt-auth = "^0.5.0"
+fastapi-login = "^1.10.1"
+python-multipart = "^0.0.9"
+passlib = "^1.7.4"
 
 
 [build-system]
