--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-settings = "^2.5.2"
 fastapi-login = "^1.10.1"
 python-multipart = "^0.0.9"
 passlib = "^1.7.4"
+slowapi = "^0.1.9"
 
 
 [build-system]
